algunas modificaciones esteticas

--- a/TIENDA-YKA/recetas.html
+++ b/TIENDA-YKA/recetas.html
@@ -59,33 +59,32 @@
     </div>
   </section>
 
-   <section>
-  <H2>BUDIN DE BANANA
-   </H2>
-<div id="receta1"><IFRame width="<iframe width="560" height="315" src="https://www.youtube.com/embed/Zb6SxRjcbM4?si=4OUfwf6y_eoJcWbP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"></IFRame></div>
-<p>
-    <EM>INGREDIENTES</EM>  
-</p>
+    <section class="budin">
+     <div class="grid-item1">
+       <H2>BUDIN DE BANANA</H2>
+       <div id="receta1"><IFRame width="<iframe width="560" height="315" src="https://www.youtube.com/embed/Zb6SxRjcbM4?si=4OUfwf6y_eoJcWbP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"></IFRame></div>
+       <p><EM>INGREDIENTES</EM></p>
 
-<ul>
-<LI>2 tazas harina de almendras</LI>
-<li>1 cdita de canela en polvo</li>
-<li>1 cdita polvo para hornear</li>
-<li>2 platanos</li>
-<li>2 huevos</li>
-<li>Datiles o 1/4 taza de endulzante de tu preferencia o al gusto</li>
-<li>1 cdita extracto de vainilla</li>
-<li>3 cds de aceite de coco o de tu preferencia</li>
-<li>1/4 taza de pasas o datiles partidos finamente (Opcional)</li>
-<li1/2 taza de walnuts o cualquier fruto seco de tu preferencia (Opcional)></li>
-</ul>
- </section>
+       <ul>
+       <LI>2 tazas harina de almendras</LI>
+       <li>1 cdita de canela en polvo</li>
+       <li>1 cdita polvo para hornear</li>
+       <li>2 bananas</li>
+       <li>2 huevos</li>
+       <li>Datiles o 1/4 taza de endulzante de tu preferencia o al gusto</li>
+       <li>1 cdita extracto de vainilla</li>
+       <li>3 cds de aceite de coco o de tu preferencia</li>
+       <li>1/4 taza de pasas o datiles partidos finamente (Opcional)</li>
+       <li1/2 taza de walnuts o cualquier fruto seco de tu preferencia (Opcional)></li>
+       </ul>
+     </div>
+   </section>
 
 
 
 
  <a href="https://api.whatsapp.com/send/?phone=5492901493584">     
-    <img src="assets/icono-wpp.png" alt="icono-wpp" class="logo-wpp">
+    <img src="../assets/icono-wpp.png" alt="icono-wpp" class="logo-wpp">
   </a>    
 
 
