--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             Nuestro Instagram
             </a> <br>
 
-            <a href="Tienda-YKA/nosotros.html" target="_blank">
+            <a href="TIENDA-YKA/nosotros.html" target="_blank">
             Sobre nosotros
             </a>
          </p>
