tratando de hacer responsive

--- a/productos/escabeches.html
+++ b/productos/escabeches.html
@@ -54,34 +54,34 @@
    </header>
    <h4>Los mejores <str>Escabeches</str></h4>
    <section class="grid-container">
-      <div class="grid-item2">
+      <div class="grid-item">
         <img src="../image/escabeche-berenjena.jpg" alt="">
       </div>
-      <div class="grid-item3">
+      <div class="grid-item">
         <img src="../image/escabeche-chivito.jpg" alt="">
       </div>
-      <div class="grid-item4">
+      <div class="grid-item">
         <img src="../image/escabeche-ciervo.jpg" alt="">
       </div>
-      <div class="grid-item5">
+      <div class="grid-item">
         <img src="../image/escabeche-conejo.jpg" alt="">
       </div>
-      <div class="grid-item6">
+      <div class="grid-item">
         <img src="../image/escabeche-cordero.jpg" alt="">
       </div>
-      <div class="grid-item7">
+      <div class="grid-item">
         <img src="../image/escabeche-jabali.jpg" alt="">
       </div>
-      <div class="grid-item8">
+      <div class="grid-item">
         <img src="../image/escabeche-llama.jpg" alt="">
       </div>
-      <div class="grid-item9">
+      <div class="grid-item">
         <img src="../image/escabeche-pavita.jpg" alt="">
       </div>
-      <div class="grid-item10">
+      <div class="grid-item">
         <img src="../image/escabeche-pollo.jpg" alt="">
       </div>
-      <div class="grid-item11">
+      <div class="grid-item">
         <img src="../image/escabeche-vizcacha.jpg" alt="">
       </div>
    </section>
