responsive con la ayuda de un compañero

--- a/TIENDA-YKA/nosotros.html
+++ b/TIENDA-YKA/nosotros.html
@@ -56,7 +56,7 @@
  <h4>Sobre Nosotros</h4>
 
 <main>
-<div class="diploma">
+<div class="Diploma">
 <img src="../image/abidiploma.jpg" alt="diploma">
 </div>
 <div class="nosotros">
