--- a/productos/escabeches.html
+++ b/productos/escabeches.html
@@ -53,7 +53,7 @@
         </section>
    </header>
    <h4>Los mejores <str>Escabeches</str></h4>
-   <section class="grid-container">
+   <section class="Grid-container">
       <div class="grid-item">
         <img src="../image/escabeche-berenjena.jpg" alt="">
       </div>
