pablo me salvo la vida, funciona el responsive

--- a/productos/condimentos.html
+++ b/productos/condimentos.html
@@ -58,20 +58,20 @@
 
      <H4> Seleccion de Los mejores Condimentos </H4>
      
-     <section class="condimentos-cointainer">
-        <div class="grid-item2">
+     <section class="Grid-container">
+        <div class="grid-item">
           <img src="../image/oregano.jpg" alt="Oregano">
         </div>
-        <div class="grid-item3">
+        <div class="grid-item">
           <img src="../image/pimenton.jpg" alt="Pimenton">
         </div>
-        <div class="grid-item4">
+        <div class="grid-item">
           <img src="../image/laurel.jpg" alt="Laurel">
         </div>
-        <div class="grid-item5">
+        <div class="grid-item">
             <img src="../image/pimientab-grano.jpg" alt="Pimientab-grano">
         </div>
-        <div class="grid-item6">
+        <div class="grid-item">
             <img src="../image/pimientan-grano.jpg" alt="Pimientan-grano">
         </div>
 
