--- a/productos/frutos-secos.html
+++ b/productos/frutos-secos.html
@@ -57,20 +57,20 @@
     </div>
   </section>
 
-  <section class="frutos-secos-container">
-    <div class="grid-item2">
+  <section class="Grid-container">
+    <div class="grid-item">
       <img src="../image/Almendras.jpg" alt="">
     </div>
-    <div class="grid-item3">
+    <div class="grid-item">
       <img src="../image/Avellanas.jpg" alt="">
     </div>
-    <div class="grid-item4">
+    <div class="grid-item">
       <img src="../image/Nueces-mariposa.jpg" alt="">
     </div>
-    <div class="grid-item5">
+    <div class="grid-item">
         <img src="../image/mani.jpg" alt="">
     </div>
-    <div class="grid-item6">
+    <div class="grid-item">
         <img src="../image/castañas-caju.jpg" alt="">
     </div>
     
