--- a/productos/productos.html
+++ b/productos/productos.html
@@ -58,23 +58,23 @@
  <h4> NUESTROS PRODUCTOS </h4>
 
 <main>
-    <section class="productos-container">
-        <div class="grid-item2">
+    <section class="Grid-container">
+        <div class="grid-item">
           <img src="../image/especias-condimentos.jpg" alt="especiasycondimentos">
           <a href="../productos/condimentos.html">Especias y condimentos</a>
         </div>
-        <div class="grid-item3">
+        <div class="grid-item">
           <img src="../image/escabeches1.jpg" alt="escabeches">
           <a href="../productos/escabeches.html">Escabeches</a>
         </div>
-        <div class="grid-item4">
+        <div class="grid-item">
           <img src="../image/frutos-secos.jpg" alt="Frutos-secos">
           <a href="../productos/frutos-secos.html">Frutos Secos</a>
         </div>
-        <div class="grid-item5">
+        <div class="grid-item">
           <img src="" alt="">
         </div>
-        <div class="grid-item6">
+        <div class="grid-item">
           <img src="" alt="">
         </div>
   
