ultimos responsive a las imagenes

--- a/TIENDA-YKA/nosotros.html
+++ b/TIENDA-YKA/nosotros.html
@@ -56,9 +56,12 @@
  <h4>Sobre Nosotros</h4>
 
 <main>
-<div class="Diploma">
+<section class="Grid-container">
+<div class="grid-item">
 <img src="../image/abidiploma.jpg" alt="diploma">
 </div>
+</section>
+
 <div class="nosotros">
 <p>
   Mi nombre es Abi, soy Licenciada en Nutrición con especialización en Nutrición Clinico - Metabólica. En am.nutricion te ofrecemos un espacio en donde vas a encontrar información, recetas, consejos y sugerencias relacionados con una alimentación saludable y consciente.
