width auto para el carrusel

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="image/especias-condimentos.jpg" class="rounded mx-auto d-block w-50" alt="img-Almendras">
+                <img src="image/especias-condimentos.jpg" class="rounded mx-auto d-block w-auto" alt="img-Almendras">
               </div>
               <div class="carousel-item">
-                <img src="image/frutos-secos.jpg" class="rounded mx-auto d-block w-20" alt="IMG-frutos-secos">
+                <img src="image/frutos-secos.jpg" class="rounded mx-auto d-block w-auto" alt="IMG-frutos-secos">
               </div>
               <div class="carousel-item">
-                <img src="image/Nueces-mariposa.jpg" class="rounded mx-auto d-block w-50" alt="Img-nueces">
+                <img src="image/Nueces-mariposa.jpg" class="rounded mx-auto d-block w-auto" alt="Img-nueces">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
