--- a/productos/frutos-secos.html
+++ b/productos/frutos-secos.html
@@ -14,7 +14,7 @@
          
         <nav class="navbar navbar-expand-lg bg-body-orange">
            <div class="container-fluid">
-             <a class="navbar-brand" href="#"><img src="../image/logo-YKA.png" class="logo" alt="logo-YKA"></a>
+             <a class="navbar-brand" href="#"><img src="../image/YKÁ.jpg" class="logo" alt="logo-YKA"></a>
              <button class="navbar-toggler bg-orange" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
              </button>
