modificando pestaña de recetas

--- a/TIENDA-YKA/recetas.html
+++ b/TIENDA-YKA/recetas.html
@@ -59,23 +59,96 @@
     </div>
   </section>
 
-    <section class="budin">
-     <div class="grid-item1">
-       <H2>BUDIN DE BANANA</H2>
-       <div id="receta1"><IFRame width="<iframe width="560" height="315" src="https://www.youtube.com/embed/Zb6SxRjcbM4?si=4OUfwf6y_eoJcWbP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"></IFRame></div>
+    <section class="recetas-container">
+     <div class="grid-item">
+       <H2>TRUFAS ENERGETICAS</H2>
+       <div><img src="../image/trufas.jpg" alt="img-trufas" ></div>
        <p><EM>INGREDIENTES</EM></p>
 
        <ul>
-       <LI>2 tazas harina de almendras</LI>
-       <li>1 cdita de canela en polvo</li>
-       <li>1 cdita polvo para hornear</li>
-       <li>2 bananas</li>
-       <li>2 huevos</li>
-       <li>Datiles o 1/4 taza de endulzante de tu preferencia o al gusto</li>
-       <li>1 cdita extracto de vainilla</li>
-       <li>3 cds de aceite de coco o de tu preferencia</li>
-       <li>1/4 taza de pasas o datiles partidos finamente (Opcional)</li>
-       <li1/2 taza de walnuts o cualquier fruto seco de tu preferencia (Opcional)></li>
+       <LI>100 grs de nuestra granola Granush c/frutos secos</LI>
+       <li>2 cdas soperas de dulce de leche (o pasta de mani)</li>
+       <li>1 cda queso untable descremado</li>
+       <li>1/2 banana pisada (30 grs aprox)</li>
+       <li>Coco rallado</li>
+       </ul>
+
+       <p>¿Como se hace?</p>
+       <ul>
+        <li>Mezcla todos los ingredientes (menos el coco) hasta formar una mezcla homogenea</li>
+        <li>Armas bolitas con ayuda de tus manos</li>
+        <li>Pasas por coco rallado y las llevas a la heladera por 30 min</li>
+        <li>y listo! tenes un snack saludable pero sobre todo RICO</li>
+       </ul>
+     </div>
+
+     <div class="grid-item">
+      <h2>BUDIN INTEGRAL DE LIMON Y FRUTOS ROJOS</h2>
+      <div><img src="../image/budinfr-rojos.jpg" alt="img-budinfr-rojos"></div>
+      <p>INGREDIENTES</p>
+      <ul>
+           <li>2 huevos</li>
+           <li>100 grs de azucar</li>
+           <li>60 ml de aceite</li>
+           <li>1 chorrito de esencia de vainilla</li>
+           <li>1 taza de harina integral</li>
+           <li>1 cdita de polvo para hornear</li>
+           <li>Ralladura y jugo de 1 limon grande</li>
+           <li>1 puñado de frutos rojos congelados</li>
+      </ul>
+      <p>¿Como se hace?</p>
+      <ul>
+        <li>Batir los huevos con el azucar hasta que se forme una mezcla cremosa</li>
+        <li>Agregar el aceite, la esencia de vainilla, la ralladura y el jugo de limon y mezclar</li>
+        <li>Agregar la harina y el polvo de hornear, mezclar con movimientos envolventes</li>
+        <li>Por ultimo, agregar los frutos rojos congelados</li>
+      </ul>
+      <p>una vez hecho todolo anterior, colocas la mezcla en una budinera previamente enmantecada y lo llevas al horno precalentado a 180° por 35 minutos (cuando lo pinches y salga listo el cuchillo, esta listo!)</p>
+     </div>
+  
+     <div class="grid-item">
+      <h2>PANCAKES DE BANANA Y ALGARROBA SIN TACC</h2>
+      <div><img src="../image/Pancakes.jpg" alt="img-pancakes"></div>
+      <P>INGREDIENTES</P>
+      <ul>
+        <li>1 huevo</li>
+        <li>1 cda sopera de harina de algarroba</li>
+        <li>1 cda sopera de harina de arroz</li>
+        <li>1 cdta de esencia de vainilla</li>
+        <li>1 cdta polvo para hornear</li>
+        <li>2 sobres de edulcorante apto coccion (opcional)</li>
+        <li>Un chorrito de leche (opcional, por si te queda la mezcla un poco espesa)</li>
+      </ul>
+      <p>¿Como se hace?</p>
+      <ul>
+        <li>Pisar banana con un tenedor</li>
+        <li>En un bowl mezclar la banana junto con el resto de los ingredientes hasta que sea homogeneo (opcional: mejor con mixer)</li>
+        <li>Calentar un sarten o panquequera aceitada</li>
+        <li>Agregar la mezcla con un cucharon</li>
+        <li>Lo haces vuelta y vuelta (Cuando veas burbujas en la parte de arriba es señal que lo tenes que dar vuelta)</li>
+        <li>Retiras del sarten y acompañas con lo que mas te guste, es una buena opcion: Frutas, yogurt, mermelada, Frutos secos</li>
+      </ul>
+     </div>
+     <div class="grid-item">
+       <h2>MUGCAKE</h2>
+       <div><img src="../image/mugcake.jpg" alt="img-mugcake"></div>
+       <p>Ingredientes</p>
+       <ul>
+        <li>1 huevo</li>
+        <li>1/4 de banana</li>
+        <li>4 cdas de avena</li>
+        <li>1 cucharada colmada de cacao amargo en polvo</li>
+        <li>1 cda de aceite </li>
+        <li>Leche c/n</li>
+        <li>Azucar c/n o edulcorante</li>
+       </ul>
+       <p>¿Como se hace?</p>
+       <ul>
+        <li>En un tazon, batir el huevo, agregar la avena, el cacao, la banana previamente pisada, el azucar y el aceite</li>
+        <li>Mezclar todos los ingredientes (si queda muy espesa agregar un chorrito de leche)</li>
+        <li>Llevar al microondas 2 minutos o hasta introducir un palillo en el centro y sacarlo limpio</li>
+        <li>Desmoldar sobre un plato</li>
+        <li>decorar con dulce de leche y coco rallado (opcional, como mas te guste)</li>
        </ul>
      </div>
    </section>
