--- a/productos/condimentos.html
+++ b/productos/condimentos.html
@@ -56,23 +56,28 @@
                </section>
        </header>
 
-     <H4> Seleccion de Los mejores Condimentos </H4>
+     <H4 class="pacifico-regular"> Seleccion de Los mejores Condimentos </H4>
      
      <section class="Grid-container">
         <div class="grid-item">
           <img src="../image/oregano.jpg" alt="Oregano">
+          <p class="pacifico-regular">Oregano</p>
         </div>
         <div class="grid-item">
           <img src="../image/pimenton.jpg" alt="Pimenton">
+          <p class="pacifico-regular">Pimenton</p>
         </div>
         <div class="grid-item">
           <img src="../image/laurel.jpg" alt="Laurel">
+          <p class="pacifico-regular">Laurel</p>
         </div>
         <div class="grid-item">
             <img src="../image/pimientab-grano.jpg" alt="Pimientab-grano">
+            <p class="pacifico-regular">Pimienta Blanca en grano</p>
         </div>
         <div class="grid-item">
             <img src="../image/pimientan-grano.jpg" alt="Pimientan-grano">
+            <p class="pacifico-regular">Pimienta Negra en grano</p>
         </div>
 
      </section>
