agregue descripcion a escabeches

--- a/productos/escabeches.html
+++ b/productos/escabeches.html
@@ -52,37 +52,47 @@
               </nav>
         </section>
    </header>
-   <h4>Los mejores <str>Escabeches</str></h4>
+   <h4 class="pacifico-regular">Los mejores <str>Escabeches</str></h4>
    <section class="Grid-container">
       <div class="grid-item">
-        <img src="../image/escabeche-berenjena.jpg" alt="">
+        <img src="../image/escabeche-berenjena.jpg" alt="img-berenjena">
+        <p class="pacifico-regular">Escabeche de Berenjena</p>
       </div>
       <div class="grid-item">
-        <img src="../image/escabeche-chivito.jpg" alt="">
+        <img src="../image/escabeche-chivito.jpg" alt="img-chivito">
+        <p class="pacifico-regular">Escabeche de Chivito</p>
       </div>
       <div class="grid-item">
-        <img src="../image/escabeche-ciervo.jpg" alt="">
+        <img src="../image/escabeche-ciervo.jpg" alt="img-ciervo">
+        <p class="pacifico-regular">Escabeche de Ciervo</p>
       </div>
       <div class="grid-item">
-        <img src="../image/escabeche-conejo.jpg" alt="">
+        <img src="../image/escabeche-conejo.jpg" alt="img-conejo">
+        <p class="pacifico-regular">Escabeche de Conejo</p>
       </div>
       <div class="grid-item">
-        <img src="../image/escabeche-cordero.jpg" alt="">
+        <img src="../image/escabeche-cordero.jpg" alt="img-cordero">
+        <p class="pacifico-regular">Escabeche de Cordero</p>
       </div>
       <div class="grid-item">
-        <img src="../image/escabeche-jabali.jpg" alt="">
+        <img src="../image/escabeche-jabali.jpg" alt="img-jabali">
+        <p class="pacifico-regular">Escabeche de Jabali</p>
       </div>
       <div class="grid-item">
-        <img src="../image/escabeche-llama.jpg" alt="">
+        <img src="../image/escabeche-llama.jpg" alt="img-llama">
+        <p class="pacifico-regular">Escabeche de Llama</p>
       </div>
       <div class="grid-item">
-        <img src="../image/escabeche-pavita.jpg" alt="">
+        <img src="../image/escabeche-pavita.jpg" alt="img-pavita">
+        <p class="pacifico-regular">Escabeche de Pavita</p>
       </div>
       <div class="grid-item">
-        <img src="../image/escabeche-pollo.jpg" alt="">
+        <img src="../image/escabeche-pollo.jpg" alt="img-pollo">
+        <p class="pacifico-regular">Escabeche de Pollo</p>
       </div>
       <div class="grid-item">
-        <img src="../image/escabeche-vizcacha.jpg" alt="">
+        <img src="../image/escabeche-vizcacha.jpg" alt="img-vizcacha">
+        <p class="pacifico-regular">Escabeche de Vizcacha</p>
       </div>
    </section>
 
