--- a/productos/frutos-secos.html
+++ b/productos/frutos-secos.html
@@ -59,19 +59,24 @@
 
   <section class="Grid-container">
     <div class="grid-item">
-      <img src="../image/Almendras.jpg" alt="">
+      <img src="../image/Almendras.jpg" alt="img-almendras">
+      <p class="pacifico-regular">Almendras</p>
     </div>
     <div class="grid-item">
-      <img src="../image/Avellanas.jpg" alt="">
+      <img src="../image/Avellanas.jpg" alt="img-avellanas">
+      <p class="pacifico-regular">Avellanas</p>
     </div>
     <div class="grid-item">
-      <img src="../image/Nueces-mariposa.jpg" alt="">
+      <img src="../image/Nueces-mariposa.jpg" alt="img-nueces">
+      <p class="pacifico-regular">Nueces mariposa</p>
     </div>
     <div class="grid-item">
-        <img src="../image/mani.jpg" alt="">
+        <img src="../image/mani.jpg" alt="img-mani">
+        <p class="pacifico-regular">Mani pelado</p>
     </div>
     <div class="grid-item">
-        <img src="../image/castañas-caju.jpg" alt="">
+        <img src="../image/castañas-caju.jpg" alt="img-castañas">
+        <p class="pacifico-regular">Castañas de caju</p>
     </div>
     
   
